--- a/src/Components/GetIdols.module.css
+++ b/src/Components/GetIdols.module.css
@@ -1,16 +1,19 @@
-.idol__container{
-  margin: 30px 0;
-  border: 2px;
+.content__container{
+  
 }
 
-.card__container{
-  margin-left: 20px ;
+.cards__container{
   display: grid;
   place-items: start;
   width: 100%;
-  max-width: 1000px;
+  max-width: 1400px;
   grid-template-columns: repeat(auto-fit, minmax(400px , 1fr));
+  position: relative;
 }
+
+/* .card__container{
+  
+} */
 
 .container__input{
   display: flex;
@@ -18,3 +21,4 @@
   gap: 16px;
   align-items: center;
 }
+
