--- a/src/Components/GetIdols.module.css
+++ b/src/Components/GetIdols.module.css
@@ -1,19 +1,17 @@
 .content__container{
-  
+  text-align: center;
 }
 
 .cards__container{
   display: grid;
   place-items: start;
+  text-align: left;
   width: 100%;
   max-width: 1400px;
   grid-template-columns: repeat(auto-fit, minmax(400px , 1fr));
   position: relative;
+  align-items: stretch;
 }
-
-/* .card__container{
-  
-} */
 
 .container__input{
   display: flex;
@@ -22,3 +20,27 @@
   align-items: center;
 }
 
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  color: #0087ca;
+}
+
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0087ca;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
